CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(CustomDataStructures VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES(include)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

SET(SOURCES 
    src/Trie.cpp
    src/String.cpp)

ADD_LIBRARY(${PROJECT_NAME} SHARED
    ${SOURCES})